syntax = "proto3";
package api;

message EchoRequest {
  string message = 1;
  string name = 2;
}

message EchoResponse {
  string name = 1;
  string message = 2;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
